Updated the release notes.
git-svn-id: https://dnnwidgets.svn.codeplex.com/svn@60423 81fbe566-5dc4-48c1-bdea-7421811ca204

--- a/trunk/releaseNotes.txt
+++ b/trunk/releaseNotes.txt
@@ -1,2 +1,2 @@
-There are no release notes for this widget.
+This release adds a missing Facebook image, and adds some optimizations to the SocialBookmarks widget.<br /><br />
 For support, use the widget website, at <a href="http://dnnwidgets.codeplex.com" target="_blank">Widget Suite for DotNetNuke</a>.
