--- a/trunk/releaseNotes.txt
+++ b/trunk/releaseNotes.txt
@@ -1,2 +1,12 @@
-This release adds a missing Facebook image, and adds some optimizations to the SocialBookmarks widget.<br /><br />
-For support, use the widget website, at <a href="http://dnnwidgets.codeplex.com" target="_blank">Widget Suite for DotNetNuke</a>.
+This release includes the following:<br />
+<ol>
+	<li>Enhancements to the External Links widget</li>
+	<li>Addition of the Icon Switcher widget</li>
+	<li>Addition of the Carousel widget</li>
+</ol>
+<br />
+Contributors of this open source and free project, include: 
+<a href="http://www.willstrohl.com" target="_blank">Will Strohl (a.k.a hismightiness)</a>, 
+<a href="http://www.dnngarden.com" target="_blank">Mark Allan (a.k.a MarkXA)</a>, and 
+<a href="http://www.schwingsoft.com/" target="_blank">Armand Datema (a.k.a nokiko)</a><br /><br />
+For support, questions, or suggestions, please use the <a href="http://dnnwidgets.codeplex.com" target="_blank">Widget Suite for DotNetNuke</a> website.
