Added widget for CSS3PIE Added widget for IEPNGFix Added selector option to ExternalLinks
git-svn-id: https://dnnwidgets.svn.codeplex.com/svn@60805 81fbe566-5dc4-48c1-bdea-7421811ca204

--- a/trunk/releaseNotes.txt
+++ b/trunk/releaseNotes.txt
@@ -3,6 +3,8 @@ This release includes the following:<br />
 	<li>Enhancements to the External Links widget</li>
 	<li>Addition of the Icon Switcher widget</li>
 	<li>Addition of the Carousel widget</li>
+	<li>Addition of the IEPNGFix widget</li>
+	<li>Addition of the CSS3PIE widget</li>
 </ol>
 <br />
 Contributors of this open source and free project, include: 
