Facebook widget added
git-svn-id: https://dnnwidgets.svn.codeplex.com/svn@63749 81fbe566-5dc4-48c1-bdea-7421811ca204

--- a/trunk/releaseNotes.txt
+++ b/trunk/releaseNotes.txt
@@ -7,6 +7,7 @@ This release includes the following:<br />
 	<li>Addition of the Cookie Checker widget</li>
 	<li>Addition of the Google Analytics Events widget</li>
 	<li>Marking external links with a CSS class name in the External Links widget</li>
+	<li>Addition of the Facebook widget</li>
 </ol>
 <br />
 Contributors of this open source and free project, include: 
