--- a/trunk/releaseNotes.txt
+++ b/trunk/releaseNotes.txt
@@ -1,16 +1,10 @@
-This release includes the following:<br />
-<ol>
-	<li>New Widget: Basic Settings Widget</li>
-	<li>New Widget: Popeye</li>
-	<li>New Widget: SyntaxHighlighter</li>
-	<li>New Widget: Include Script</li>
-	<li>New Widget: Include jQueryUI</li>
-	<li>New Widget: Facebook</li>
-	<li>New Widget: Store</li>
-</ol>
+<p>This release includes the following:</p>
+<ul>
+	<li>Bug Fix: Store Widget required an update to be compatible with the store provider update</li>
+</ul>
 <br />
-Contributors of this open source and free project, include: 
+<p>Contributors of this open source and free project, include: 
 <a href="http://www.willstrohl.com" target="_blank">Will Strohl (a.k.a hismightiness)</a>, 
 <a href="http://www.dnngarden.com" target="_blank">Mark Allan (a.k.a MarkXA)</a>, and 
 <a href="http://www.schwingsoft.com/" target="_blank">Armand Datema (a.k.a nokiko)</a><br /><br />
-For support, questions, or suggestions, please use the <a href="http://dnnwidgets.com" target="_blank">Widget Suite for DotNetNuke</a> website.
+For support, questions, or suggestions, please use the <a href="http://dnnwidgets.com" target="_blank">Widget Suite for DotNetNuke</a> website.</p>
